css/parser/tests/errors/url/eof-whitespaces/output.stderr
error: Expected "}"
 --> $DIR/tests/errors/url/eof-whitespaces/input.css:1:25
  |
1 | a { prop: url(foo.png   
  |                         ^

